@@ -1,3 +1,9 @@
+Changes since 4.0 Alpha 1
+
+* [HTTPASYNC-3]: Fixed incorrect handling of expired I/O sessions by SessionPool.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
+
 Release 4.0 Alpha 1
 -------------------
 
